--- a/Week1-Day5/afternoon/react-ts-app/src/components/Exercise08/DropdownSelection.module.css
+++ b/Week1-Day5/afternoon/react-ts-app/src/components/Exercise08/DropdownSelection.module.css
@@ -1,10 +1,6 @@
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 10px;
   align-items: center;
-}
-
-.txtKey {
-  height: 20px;
 }
