add Week1-Day6 afternoon and complete homework

--- a/Week2-Day6/homework/react-ts-app/src/App.css
+++ b/Week2-Day6/homework/react-ts-app/src/App.css
@@ -1,4 +1,6 @@
-#root {
+@import "tailwindcss";
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -16,7 +18,7 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 @keyframes logo-spin {
   from {
@@ -33,10 +35,10 @@
   }
 }
 
-.card {
+/* .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
-}
+} */
