--- a/Week2-Day6/homework/react-ts-app/src/index.css
+++ b/Week2-Day6/homework/react-ts-app/src/index.css
@@ -1,4 +1,6 @@
-:root {
+@import "tailwindcss";
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -52,7 +54,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
